--- a/styles.css
+++ b/styles.css
@@ -19,10 +19,10 @@ html {
 
 .layers {
    position: relative;
-
    width: 295px;
    height: 550px;
    margin: 0 auto;
+   cursor: pointer;
 }
 
 .layers img {
@@ -85,68 +85,48 @@ html {
 }
 
 
-/* CSS 3 in 30 DAYS LOGO */
+/* BOTTOM NAVIGATION */
 
-.layers-2 {
-   margin: 10% auto;
-   position: relative;
-   width: 500px;
-   height: 500px;
-}
-
-.layers-2 img {
+.navigation {
    position: absolute;
-   -webkit-transform-style: preserve-3d;
-   transform-style: preserve-3d;
-   -webkit-transition: all 1.6s ease;
-   transition: all 1.6s ease;
+   bottom: 5%;
+   left: 50%;
+   transform: translateX(-50%);
+   display: flex;
+   align-items: flex-end;
+   justify-content: center;
+
+   margin: 0 auto;
+
+   font-size: 2rem;
 }
 
-.circle {
-   width: 500px;
-   height: 500px;
+a {
+   text-decoration: none;
+
+   color: #ebebeb;
 }
 
-.css3 {
-   width: 526px;
-   height: 262px;
-   top: 60px;
-   left: -15px;
+.navigation a:nth-child(2) {
+   padding: 0 30px;
 }
 
-.in-30-days {
-   width: 474px;
-   height: 202px;
-   top: 190px;
-   left: 29px;
+.navigation a:hover {
+   cursor: pointer;
+
+   color: #bbb9bb;
 }
 
-.brad {
-   width: 152px;
-   height: 67px;
-   bottom: 50px;
-   left: 208px;
+.navigation a:active {
+   transform: translateY(1px);
 }
 
-/* TRANFORMATIONS */
 
-.layers-2:hover img {
-   -webkit-transform: perspective(1000px) rotateX(45deg) rotateY(22deg) rotateZ(-25deg) translate(40px, -40px);
-   transform: perspective(1000px) rotateX(45deg) rotateY(22deg) rotateZ(-25deg) translate(40px, -40px);
-}
+/* MEDIA QUERIES */
 
-.layers-2:hover .css3 {
-   -webkit-transform: perspective(1000px) rotateX(45deg) rotateY(30deg) rotateZ(-25deg) translate(10px, -40px) translateZ(30px);
-   transform: perspective(1000px) rotateX(45deg) rotateY(30deg) rotateZ(-25deg) translate(10px, -40px) translateZ(30px);
-}
-
-.layers-2:hover .in-30-days {
-   -webkit-transform: perspective(1000px) rotateX(45deg) rotateY(30deg) rotateZ(-30deg) translate(0px, 0px) translateZ(160px);
-   transform: perspective(1000px) rotateX(45deg) rotateY(30deg) rotateZ(-30deg) translate(0px, 0px) translateZ(160px);
-}
-
-.layers-2:hover .brad {
-   -webkit-transform: perspective(1000px) rotateX(33deg) rotateY(34deg) rotateZ(-28deg) translate(40px, -10px) translateZ(220px);
-   transform: perspective(1000px) rotateX(33deg) rotateY(34deg) rotateZ(-28deg) translate(40px, -10px) translateZ(220px);
-
+@media screen and (max-width: 850px) and (orientation: landscape) {
+   .navigation {
+      position: relative;
+      margin: 0 auto 10%;
+   }
 }
